# leviathan

./: Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: authent.rs  lib.rs  main.rs
src/response/: ticker.rs
tests/: example.rs  main.rs
tests/data/: tickers_error.json  tickers_success.json
